# Portfolio

./: pyproject.toml  requirements.txt  streamlit_app.py
style/: style.css
